--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -c webpack.config.js",
-    "serve": "webpack serve --mode development -c webpack.config.js"
+    "build": "webpack -c webpack.prod.config.js",
+    "serve": "webpack serve -c webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
