--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
     "postcss-deadcss": "^1.0.0",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.0.0",
